# BocaLibre

./: .gitignore  CITATION.cff  README.md  UI_sprite.aseprite  pyproject.toml
boca/_agentverse_scripts/: match_maker.py  test_startup.py
boca/_boca-t5-base_old/: project.json
boca/_boca-t5-base_old/src/: partner_client.py  user_client.py
boca/_boca-t5-base_old/src/agents/: match_maker_agent.py  partner_agent.py  t5_base_agent.py  user_agent.py
boca/_boca-t5-base_old/src/protocols/: boca_user.py  match_maker.py  t5_base_agent.py  t5_base_user.py
boca/agentverse_scripts/: boca_user.py  match_maker.py  t5_base.py  test_startup.py
boca/boca-t5-base/src/: agent1qv4urg4pkz_data.json  interlocutor_client.py  match_maker_client.py  private_keys.json  refactor.py
boca/boca-t5-base/src/agents/: boca_t5_base_user.py  interlocutor.py  match_maker_agent.py  partner_agent.py  t5_base_agent.py  user_agent.py
boca/boca-t5-base/src/messages/: boca_message.py
boca/python/: pyproject.toml
boca/python-reference/: pyproject.toml
boca/src/agents/: t5_base_agent.py
boca/t5-base/src/: agent1qdmz23g99a_data.json  agent1qf94pcajt0_data.json  agent1qwzud7wkcl_data.json  boca_partner.py  boca_user.py  match_maker.py  private_keys.json  simple_client.py
integrations/t5-base/src/: private_keys.json
t5-base/: README.md
t5-base/src/: agent.py  agent1qvllsynpln_data.json  alice_client.py  base_agent_client.py  boca_client.py  private_keys.json
t5-base/src/agents/: alice.py  boca_user_agent.py
t5-base/src/uagents/: wallet_messaging.py
(+8 files in other folders)
