[tool.poetry]
name = "bocalibre"
version = "0.1.0"
description = "An agent-based, peer-to-peer, chat/social messaging application, intended for users with differing languages."
authors = ["Ben <bgoober2@protonmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uagents = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
