[tool.poetry]
name = "bocalibre"
version = "0.1.0"
description = "An agent-based messaging application designed for users using differing languages."
authors = ["Ben <bgoober2@protonmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
